<package>
  <name>people_tracking_filter</name>
  <version>1.0.9</version>
  <description>
  A collection of filtering tools for tracking people's locations
  </description>
  <author>Caroline Pantofaru</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/people_tracking_filter</url>  

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>bfl</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>bfl</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>


